--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ST37QBC8HZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-ST37QBC8HZ');
+    </script>
 </head>
 <body>
 
